--- a/style.css
+++ b/style.css
@@ -28,6 +28,19 @@ h2 {
     font-family: var(--heading-font);
 }
 
+button {
+    width: 59%;
+    height: 5vh;
+    padding: 0 5%;
+    background-color: var(--pink);
+    border: 0;
+    outline: none;
+    border-radius: 3vh;
+    color: #fff;
+    box-shadow: 1px 1px 10px 1px #00000025;
+    cursor: pointer;
+    transition: background-color 500ms ease;
+}
 
 /* HEADER */
 
@@ -46,7 +59,7 @@ header img {
 }
 
 header button {
-    max-width: 30%;
+    max-width: 32%;
     height: 3.5vh;
     padding: 0 5%;
     background-color: #fff;
@@ -54,6 +67,12 @@ header button {
     border-radius: 2vh;
     color: var(--pink);
     box-shadow: none;
+    font-size: 70%;
+}
+
+header button:hover {
+    background-color: #fff;
+    cursor: pointer;
 }
 
 
@@ -80,16 +99,9 @@ header button {
     font-weight: 500;
 }
 
-button {
-    width: 57%;
-    height: 5vh;
-    padding: 0 5%;
-    background-color: var(--pink);
-    border: 0;
-    outline: none;
-    border-radius: 3vh;
-    color: #fff;
-    box-shadow: 1px 1px 10px 1px #00000025;
+
+button:hover {
+    background-color: var(--light-pink);
 }
 
 .hero img {
@@ -171,27 +183,133 @@ button {
 }
 
 
+/* ////////////////////////////////////////////////////////////////////////////////// */
+/* TABLET SCREEN */
 
+@media only screen and (min-width: 376px) and (max-width: 768px) {
 
-
-@media only screen and (min-width: 800px) {
-    body {
-        padding: 3% 5%;
-    }
+    /* HEADER */
 
     header {
-        max-height: 8%;
-    }
-
-    header button {
-        max-width: 17%;
-        height: 3.8vh;
-        font-size: 1rem;
-        padding: 0 3%;
+        padding: 7% 7%;
     }
 
     header img {
-        max-width: 35%;
+        max-width: 40%;
         max-height: 4vh;
     }
+
+    header button {
+        max-width: 25%;
+        height: 3.5vh;
+        padding: 0 2%;
+        font-size: 85%;
+    }
+
+
+    /* HERO-SECTION */
+
+    .hero {
+        width: 100%;
+        margin-top: 10%;
+        padding: 5% 14%;
+    }
+
+    .hero h1 {
+        font-size: 1.6rem;
+    }
+
+    .hero p {
+        margin: 5% 0 12% 0;
+        max-width: 100%;
+        font-size: 1rem;
+        font-weight: 500;
+    }
+
+    button {
+        width: 55%;
+        height: 5vh;
+        padding: 0 4%;
+        color: #fff;
+        font-size: 80%;
+    }
+
+    .hero img {
+        margin: 25% 0;
+        width: 100%;
+    }
+
+    /* STATS-SECTION */
+
+    .stats {
+        height: 60vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .stats div .stat-text {
+        text-align: center;
+    }
+
+    .stats div .stat-text p {
+        font-size: 3.5rem;
+        font-weight: 700;
+    }
+
+
+    /* GROW-SECTION and FLOWING-SECTION and YOUR-USERS-SECTION*/
+
+    .grow-section,
+    .your-users-section {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .grow-section #bg-section-top-mobile-1,
+    .grow-section #bg-section-bottom-mobile-1
+    .your-users-section #bg-section-top-mobile-2,
+    .your-users-section #bg-section-bottom-mobile-2 {
+        width: 100%;
+    }
+
+    .grow-section .grow,
+    .your-users-section .users,
+    .flowing {
+        width: 100%;
+        background-color: var(--very-pale-blue);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        padding: 18% 6% 18%;
+    }
+
+    .flowing {
+        background-color: #fff;
+        margin: 10% 0 20%;
+    }
+
+    .grow-section .grow #illustration-grow-together,
+    .your-users-section .users #illustration-your-users,
+    .flowing #illustration-flowing-conversation {
+        width: 80%;
+    }
+
+    .grow-section .grow h2,
+    .your-users-section .users h2,
+    .flowing h2 {
+        margin: 20% 0 5%;
+        font-size: 1.2rem
+    }
+
+    .grow-section .grow p,
+    .your-users-section .users p,
+    .flowing p {
+        font-size: 0.88rem;
+        font-weight: 500;
+    }
+
 }
