--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@ h2 {
 
 button {
     width: 59%;
-    height: 5vh;
-    padding: 0 5%;
+    height: 7vw;
+    padding: 1% 5%;
     background-color: var(--pink);
     border: 0;
     outline: none;
@@ -39,7 +39,8 @@ button {
     color: #fff;
     box-shadow: 1px 1px 10px 1px #00000025;
     cursor: pointer;
-    transition: background-color 500ms ease;
+    font-size: 3vw;
+    transition: background-color 300ms ease;
 }
 
 /* HEADER */
@@ -55,19 +56,19 @@ header {
 
 header img {
     max-width: 32%;
-    max-height: 2.5vh;
+    max-height: 6vw;
 }
 
 header button {
     max-width: 32%;
-    height: 3.5vh;
+    height: 6vw;
     padding: 0 5%;
     background-color: #fff;
     border: 2px solid var(--pink);
-    border-radius: 2vh;
+    border-radius: 3vw;
     color: var(--pink);
     box-shadow: none;
-    font-size: 70%;
+    font-size: 3.5vw;
 }
 
 header button:hover {
@@ -81,7 +82,7 @@ header button:hover {
 .hero {
     width: 100%;
     text-align: center;
-    margin-top: 30%;
+    margin-top: 6rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -89,13 +90,13 @@ header button:hover {
 }
 
 .hero h1 {
-    font-size: 1.5rem;
+    font-size: 7.5vw;
 }
 
 .hero p {
     margin: 7% 0 12% 0;
     max-width: 97%;
-    font-size: .9rem;
+    font-size: 3.84vw;
     font-weight: 500;
 }
 
@@ -182,7 +183,7 @@ button:hover {
     font-weight: 500;
 }
 
-
+/* 
 /* ////////////////////////////////////////////////////////////////////////////////// */
 /* TABLET SCREEN */
 
@@ -196,14 +197,14 @@ button:hover {
 
     header img {
         max-width: 40%;
-        max-height: 4vh;
+        max-height: 4.5vw;
     }
 
     header button {
         max-width: 25%;
-        height: 3.5vh;
+        height: 5vw;
         padding: 0 2%;
-        font-size: 85%;
+        font-size: 2.3vw;
     }
 
 
@@ -211,27 +212,28 @@ button:hover {
 
     .hero {
         width: 100%;
-        margin-top: 10%;
-        padding: 5% 14%;
+        margin-top: 10vw;
+        padding: 5% 7%;
     }
-
+    
     .hero h1 {
-        font-size: 1.6rem;
+        font-size: 4vw;
     }
-
+    
     .hero p {
-        margin: 5% 0 12% 0;
-        max-width: 100%;
-        font-size: 1rem;
+        margin: 7% 0 12% 0;
+        max-width: 97%;
+        font-size: .9rem;
         font-weight: 500;
+        flex-grow: 1;
     }
 
     button {
-        width: 55%;
-        height: 5vh;
+        width: 48%;
+        height: 5.5vw;
         padding: 0 4%;
         color: #fff;
-        font-size: 80%;
+        font-size: 2.5vw;
     }
 
     .hero img {
@@ -313,3 +315,111 @@ button:hover {
     }
 
 }
+
+/* ///////////////////////////////////////////////////////////////////////////////// */
+/*  */
+
+@media only screen and (max-width: 600px) {
+    
+    /* HERO-SECTION */
+
+    .hero h1 {
+        font-size: 7vw;
+    }
+    
+    .hero p {
+        margin: 7% 0 12% 0;
+        max-width: 97%;
+        font-size: .9rem;
+        font-weight: 500;
+        flex-grow: 1;
+    }
+
+    button {
+        width: 48%;
+        height: 5.5vw;
+        padding: 0 4%;
+        color: #fff;
+        font-size: 2.5vw;
+    }
+
+    .hero img {
+        margin: 25% 0;
+        width: 100%;
+    }
+
+    /* STATS-SECTION */
+
+    .stats {
+        height: 60vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .stats div .stat-text {
+        text-align: center;
+    }
+
+    .stats div .stat-text p {
+        font-size: 3.5rem;
+        font-weight: 700;
+    }
+
+
+    /* GROW-SECTION and FLOWING-SECTION and YOUR-USERS-SECTION*/
+
+    .grow-section,
+    .your-users-section {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .grow-section #bg-section-top-mobile-1,
+    .grow-section #bg-section-bottom-mobile-1
+    .your-users-section #bg-section-top-mobile-2,
+    .your-users-section #bg-section-bottom-mobile-2 {
+        width: 100%;
+    }
+
+    .grow-section .grow,
+    .your-users-section .users,
+    .flowing {
+        width: 100%;
+        background-color: var(--very-pale-blue);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        padding: 18% 6% 18%;
+    }
+
+    .flowing {
+        background-color: #fff;
+        margin: 10% 0 20%;
+    }
+
+    .grow-section .grow #illustration-grow-together,
+    .your-users-section .users #illustration-your-users,
+    .flowing #illustration-flowing-conversation {
+        width: 80%;
+    }
+
+    .grow-section .grow h2,
+    .your-users-section .users h2,
+    .flowing h2 {
+        margin: 20% 0 5%;
+        font-size: 1.2rem
+    }
+
+    .grow-section .grow p,
+    .your-users-section .users p,
+    .flowing p {
+        font-size: 0.88rem;
+        font-weight: 500;
+    }
+
+}
+
