--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Poppins:wght@600;700&display=swap');
 
 * {
     margin: 0;
@@ -6,21 +6,38 @@
     box-sizing: border-box;
 }
 
+
+
 :root {
     --body-font: 'Open Sans', sans-serif;
     --heading-font: 'Poppins', sans-serif;
-    --pink: hsl(322, 100%, 66%);
+    --pink: #ff52bf;
     --light-pink: hsl(321, 100%, 78%);
     --light-red: hsl(0, 100%, 63%);
     --very-dark-cyan: hsl(192, 100%, 9%);
     --very-pale-blue: hsl(207, 100%, 98%);
 }
 
-body {
-    max-width: 100%;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    font-family: var(--body-font);
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--light-pink);
+    border-radius: 30px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--pink);
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px grey; 
+    border-radius: 8px;
 }
 
 h1,
@@ -28,398 +45,509 @@ h2 {
     font-family: var(--heading-font);
 }
 
-button {
-    width: 59%;
-    height: 7vw;
-    padding: 1% 5%;
+.para {
+    font-size: 1rem;
+    max-width: 45%;
+}
+
+.btn {
+    max-width: 25em;
+    padding: 1.2em 5em;
     background-color: var(--pink);
     border: 0;
     outline: none;
-    border-radius: 3vh;
+    border-radius: 2rem;
     color: #fff;
     box-shadow: 1px 1px 10px 1px #00000025;
     cursor: pointer;
-    font-size: 3vw;
+    font-family: var(--body-font);
+    font-size: 1rem;
     transition: background-color 300ms ease;
 }
 
-/* HEADER */
-
-header {
-    width: 100%;
-    max-height: 10%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5% 7%;
-}
-
-header img {
-    max-width: 32%;
-    max-height: 6vw;
-}
-
-header button {
-    max-width: 32%;
-    height: 6vw;
-    padding: 0 5%;
-    background-color: #fff;
-    border: 2px solid var(--pink);
-    border-radius: 3vw;
-    color: var(--pink);
-    box-shadow: none;
-    font-size: 3.5vw;
-}
-
-header button:hover {
-    background-color: #fff;
-    cursor: pointer;
-}
-
-
-/* HERO-SECTION */
-
-.hero {
-    width: 100%;
-    text-align: center;
-    margin-top: 6rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 5% 7%;
-}
-
-.hero h1 {
-    font-size: 7.5vw;
-}
-
-.hero p {
-    margin: 7% 0 12% 0;
-    max-width: 97%;
-    font-size: 3.84vw;
-    font-weight: 500;
-}
-
-
-button:hover {
+.btn:hover {
     background-color: var(--light-pink);
 }
 
-.hero img {
-    margin: 25% 0;
+/* DISPLAY */
+
+.container {
     width: 100%;
-}
-
-/* STATS-SECTION */
-
-.stats {
-    height: 60vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.stats div .stat-text {
-    text-align: center;
-}
-
-.stats div .stat-text p {
-    font-size: 3.5rem;
-    font-weight: 700;
-}
-
-
-/* GROW-SECTION and FLOWING-SECTION and YOUR-USERS-SECTION*/
-
-.grow-section,
-.your-users-section {
-    display: flex;
-    flex-direction: column;
-}
-
-.grow-section #bg-section-top-mobile-1,
-.grow-section #bg-section-bottom-mobile-1
-.your-users-section #bg-section-top-mobile-2,
-.your-users-section #bg-section-bottom-mobile-2 {
-    width: 100%;
-}
-
-.grow-section .grow,
-.your-users-section .users,
-.flowing {
-    width: 100%;
-    background-color: var(--very-pale-blue);
+    padding-top: 2em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 20vh;
+    font-family: var(--body-font);
+    overflow-x: hidden;
+}
+
+
+main,
+
+main >
+.hero,
+
+main >
+.hero >
+.hero-content,
+
+main >
+.hero >
+.hero-content >
+.hero-content-col-1,
+
+main >
+.content,
+
+main >
+.content >
+.ready {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
+
+
+
+/* //////////////////////////////////////////////////////////// */
+/* HEADER */
+
+header {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    max-width: 1600px;
+    margin: 2em auto;
+}
+
+header >
+img,
+
+footer >
+.footer-container >
+.huddle >
+img{
+    width: 13em;
+    max-width: 15em;
+}
+
+header >
+button {
+    max-width: 500px;
+    margin: .2em 0;
+    padding: .4em 1.5em;
+    background-color: #fff;
+    outline: none;
+    border: .1em solid var(--pink);
+    border-radius: 2em;
+    color: var(--pink);
+    font-size: 1rem;
+    cursor: pointer;
+}
+/* //////////////////////////////////////////////////////////////////////////////// */
+
+
+
+
+
+
+
+
+/* ////////////////////////////////////////////////////////////////////////////// */
+/* MAIN */
+
+main {
+    gap: 30vh;
+    width: 100%;
+}
+
+main >
+.hero {
+    gap: 18vh;
+}
+
+main >
+.hero >
+.hero-content {
+    gap: 18vh;
+    align-items: center;
+}
+
+main >
+.hero >
+.hero-content >
+.hero-content-col-1 {
+    max-width: 80%;
+    margin: 0 auto;
+    gap: 5vh;
     align-items: center;
     text-align: center;
-    padding: 18% 6% 18%;
+    justify-content: space-around;
 }
 
-.flowing {
-    background-color: #fff;
-    margin: 10% 0 20%;
+main >
+.hero >
+.hero-content >
+.hero-content-col-1 >
+h1 {
+    font-size: 2.8em;
 }
 
-.grow-section .grow #illustration-grow-together,
-.your-users-section .users #illustration-your-users,
-.flowing #illustration-flowing-conversation {
-    width: 80%;
-}
-
-.grow-section .grow h2,
-.your-users-section .users h2,
-.flowing h2 {
-    margin: 20% 0 5%;
-    font-size: 1.2rem
-}
-
-.grow-section .grow p,
-.your-users-section .users p,
-.flowing p {
-    font-size: 0.88rem;
+main >
+.hero >
+.hero-content >
+.hero-content-col-1 >
+p {
     font-weight: 500;
 }
 
-/* 
-/* ////////////////////////////////////////////////////////////////////////////////// */
-/* TABLET SCREEN */
-
-@media only screen and (min-width: 376px) and (max-width: 768px) {
-
-    /* HEADER */
-
-    header {
-        padding: 7% 7%;
-    }
-
-    header img {
-        max-width: 40%;
-        max-height: 4.5vw;
-    }
-
-    header button {
-        max-width: 25%;
-        height: 5vw;
-        padding: 0 2%;
-        font-size: 2.3vw;
-    }
-
-
-    /* HERO-SECTION */
-
-    .hero {
-        width: 100%;
-        margin-top: 10vw;
-        padding: 5% 7%;
-    }
-    
-    .hero h1 {
-        font-size: 4vw;
-    }
-    
-    .hero p {
-        margin: 7% 0 12% 0;
-        max-width: 97%;
-        font-size: .9rem;
-        font-weight: 500;
-        flex-grow: 1;
-    }
-
-    button {
-        width: 48%;
-        height: 5.5vw;
-        padding: 0 4%;
-        color: #fff;
-        font-size: 2.5vw;
-    }
-
-    .hero img {
-        margin: 25% 0;
-        width: 100%;
-    }
-
-    /* STATS-SECTION */
-
-    .stats {
-        height: 60vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-    }
-
-    .stats div .stat-text {
-        text-align: center;
-    }
-
-    .stats div .stat-text p {
-        font-size: 3.5rem;
-        font-weight: 700;
-    }
-
-
-    /* GROW-SECTION and FLOWING-SECTION and YOUR-USERS-SECTION*/
-
-    .grow-section,
-    .your-users-section {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .grow-section #bg-section-top-mobile-1,
-    .grow-section #bg-section-bottom-mobile-1
-    .your-users-section #bg-section-top-mobile-2,
-    .your-users-section #bg-section-bottom-mobile-2 {
-        width: 100%;
-    }
-
-    .grow-section .grow,
-    .your-users-section .users,
-    .flowing {
-        width: 100%;
-        background-color: var(--very-pale-blue);
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        text-align: center;
-        padding: 18% 6% 18%;
-    }
-
-    .flowing {
-        background-color: #fff;
-        margin: 10% 0 20%;
-    }
-
-    .grow-section .grow #illustration-grow-together,
-    .your-users-section .users #illustration-your-users,
-    .flowing #illustration-flowing-conversation {
-        width: 80%;
-    }
-
-    .grow-section .grow h2,
-    .your-users-section .users h2,
-    .flowing h2 {
-        margin: 20% 0 5%;
-        font-size: 1.2rem
-    }
-
-    .grow-section .grow p,
-    .your-users-section .users p,
-    .flowing p {
-        font-size: 0.88rem;
-        font-weight: 500;
-    }
-
+main >
+.hero >
+.hero-content >
+.hero-content-col-2 {
+    display: grid;
+    place-items: center;
 }
 
-/* ///////////////////////////////////////////////////////////////////////////////// */
-/*  */
-
-@media only screen and (max-width: 600px) {
-    
-    /* HERO-SECTION */
-
-    .hero h1 {
-        font-size: 7vw;
-    }
-    
-    .hero p {
-        margin: 7% 0 12% 0;
-        max-width: 97%;
-        font-size: .9rem;
-        font-weight: 500;
-        flex-grow: 1;
-    }
-
-    button {
-        width: 48%;
-        height: 5.5vw;
-        padding: 0 4%;
-        color: #fff;
-        font-size: 2.5vw;
-    }
-
-    .hero img {
-        margin: 25% 0;
-        width: 100%;
-    }
-
-    /* STATS-SECTION */
-
-    .stats {
-        height: 60vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-    }
-
-    .stats div .stat-text {
-        text-align: center;
-    }
-
-    .stats div .stat-text p {
-        font-size: 3.5rem;
-        font-weight: 700;
-    }
-
-
-    /* GROW-SECTION and FLOWING-SECTION and YOUR-USERS-SECTION*/
-
-    .grow-section,
-    .your-users-section {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .grow-section #bg-section-top-mobile-1,
-    .grow-section #bg-section-bottom-mobile-1
-    .your-users-section #bg-section-top-mobile-2,
-    .your-users-section #bg-section-bottom-mobile-2 {
-        width: 100%;
-    }
-
-    .grow-section .grow,
-    .your-users-section .users,
-    .flowing {
-        width: 100%;
-        background-color: var(--very-pale-blue);
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        text-align: center;
-        padding: 18% 6% 18%;
-    }
-
-    .flowing {
-        background-color: #fff;
-        margin: 10% 0 20%;
-    }
-
-    .grow-section .grow #illustration-grow-together,
-    .your-users-section .users #illustration-your-users,
-    .flowing #illustration-flowing-conversation {
-        width: 80%;
-    }
-
-    .grow-section .grow h2,
-    .your-users-section .users h2,
-    .flowing h2 {
-        margin: 20% 0 5%;
-        font-size: 1.2rem
-    }
-
-    .grow-section .grow p,
-    .your-users-section .users p,
-    .flowing p {
-        font-size: 0.88rem;
-        font-weight: 500;
-    }
-
+main >
+.hero >
+.hero-content >
+.hero-content-col-2 >
+img {
+    width: 90%;
 }
 
+main >
+.hero >
+.hero-stats {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+main >
+.hero >
+.hero-stats >
+.stats-sub >
+h2{
+    font-size: 5rem;
+    font-weight: 600;
+}
+
+main >
+.hero >
+.hero-stats >
+.stats-sub >
+p {
+    text-align: center;
+    color: gray;
+}
+
+
+main >
+.content {
+    justify-content: space-around;
+    gap: 20vh;
+}
+
+main >
+.content >
+.grow >
+#bg-section-top-desktop-1,
+
+main >
+.content >
+.grow >
+#bg-section-bottom-desktop-1
+
+main >
+.content >
+.your-users >
+#bg-section-top-desktop-2,
+
+main >
+.content >
+.your-users >
+#bg-section-bottom-desktop-2 {
+    width: 100%;
+}
+
+main >
+.content >
+.grow,
+
+main >
+.content >
+.your-users {
+    display: flex;
+    flex-direction: column;
+}
+
+main >
+.content >
+.grow >
+.grow-items,
+
+main >
+.content >
+.your-users >
+.users-items,
+
+main >
+.content >
+.flowing {
+    background-color: var(--very-pale-blue);
+    display: flex;
+    padding: 3em 5em;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-around;
+}
+
+main >
+.content >
+.flowing {
+    width: 100%;
+    padding-right: 3em;
+    background-color: #fff;
+    justify-content: space-between;
+}
+
+main >
+.content >
+.grow >
+.grow-items >
+img,
+
+main >
+.content>
+.your-users >
+.users-items >
+img {
+    width: 40%;
+}
+
+main >
+.content>
+.flowing >
+img {
+    width: 45%;
+    margin-right: 10vw;
+}
+
+main >
+.content >
+.grow >
+.grow-items >
+.grow-text,
+
+main >
+.content>
+.your-users >
+.users-items >
+.users-text, 
+
+main >
+.content>
+.flowing >
+.flowing-text {
+    max-width: 50%;
+}
+
+main >
+.content >
+.grow >
+.grow-items >
+.grow-text >
+h2,
+
+main >
+.content>
+.your-users >
+.users-items >
+.users-text >
+h2,
+
+main >
+.content >
+.flowing >
+.flowing-text >
+h2,
+
+main >
+.content >
+.ready >
+h2 {
+    font-size: 2.2rem;
+    margin-bottom: 1em;
+}
+
+main >
+.content >
+.grow >
+.grow-items >
+.grow-text >
+.para,
+
+main >
+.content >
+.your-users >
+.users-items >
+.users-text >
+.para {
+    max-width: 80%;
+}
+
+main >
+.content >
+.flowing >
+.flowing-text >
+.para {
+    max-width: 90%;
+}
+
+main >
+.content >
+.ready {
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    text-align: center;
+}
+/* ///////////////////////////////////////////////////////////////// */
+
+
+
+
+
+
+
+/* //////////////////////////////////////////////////////////// */
+/* FOOTER */
+
+footer {
+    display: flex;
+    flex-direction: column;
+}
+
+footer >
+.footer-container {
+    background-color: var(--very-dark-cyan);
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    align-items: center;
+    padding: 5em 10em;
+    gap: 20vw;
+    color: #fff;
+    font-size: .8rem;
+}
+
+footer >
+.footer-container >
+.newsletter,
+
+footer >
+.footer-container >
+.huddle {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5vh;
+}
+
+footer >
+.footer-container >
+.newsletter >
+h2 {
+    font-size: 1.3rem;
+}
+
+footer >
+.footer-container >
+.newsletter >
+p,
+
+footer >
+.footer-container >
+.huddle >
+p {
+    max-width: 65%;
+}
+
+footer >
+.footer-container >
+.newsletter >
+.email {
+    margin-top: 3vh;
+    display: flex;
+    align-items: center;
+    gap: 2vw;
+}
+
+footer >
+.footer-container >
+.newsletter >
+.email >
+input {
+    width: 60%;
+    padding: .8em;
+    outline: none;
+    border: 0;
+    border-radius: .5em;
+}
+
+footer >
+.footer-container >
+.newsletter >
+.email >
+button {
+    border-radius: .5em;
+    max-width: 15em;
+    padding: .55em 1em;
+}
+
+footer >
+.footer-container >
+.huddle {
+    gap: 4vh;
+}
+
+footer >
+.footer-container >
+.huddle >
+.contact {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5vh;
+}
+
+footer >
+.footer-container >
+.huddle >
+.contact >
+.contact-detail {
+    display:flex;
+    gap: 1em;
+}
+
+footer >
+.footer-container >
+.huddle >
+.social-media {
+    margin-top: 2em;
+    display: flex;
+    gap: 1.3em;
+}
+
+footer >
+.footer-container >
+.huddle >
+.social-media >
+img {
+    width: 2em;
+}
+
+
+/* ////////////////////////////////////////////////////////////////// */
